@@ -4,6 +4,7 @@ import com.example.demo.entity.VerificationRule;
 import com.example.demo.repository.VerificationRuleRepository;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class VerificationRuleService {
@@ -14,12 +15,15 @@ public class VerificationRuleService {
         this.repo = repo;
     }
 
-    public VerificationRule createRule(VerificationRule r) {
-        return repo.save(r);
+    public VerificationRule createRule(VerificationRule rule) {
+        return repo.save(rule);
     }
 
     public List<VerificationRule> getActiveRules() {
-        return repo.findAll().stream().filter(VerificationRule::getActive).toList();
+        return repo.findAll()
+                .stream()
+                .filter(VerificationRule::getActive)
+                .collect(Collectors.toList());
     }
 
     public List<VerificationRule> getAllRules() {
